Correction bug <p> Team => center //Modify Z-index Navbar to cover text Team

--- a/src/styles/Team.css
+++ b/src/styles/Team.css
@@ -97,6 +97,9 @@
   white-space: pre-line;
 }
 
+.team-section .card-content p {
+  text-align: center;
+}
 .team-section .card::before {
   position: absolute;
   content: "";
